@@ -1,3 +1,8 @@
+2009-08-13  Richard Guenther  <rguenther@suse.de>
+    
+	PR rtl-optimization/41033
+	* gcc.dg/pr41033.c: New test. 
+
 2009-08-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	Backport:
